.k8s/consumer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-consumer
  namespace: iot-telemetry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-consumer
  template:
    metadata:
      labels:
        app: iot-consumer
    spec:
      containers:
      - name: iot-consumer
        image: ghcr.io/raghiba/iot-telemetry-consumer:latest
        ports:
        - containerPort: 8082
