.k8s/consumer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iot-consumer
  namespace: iot-telemetry
spec:
  selector:
    app: iot-consumer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8082
  type: ClusterIP
